--- a/notes/lecturenotes.tex
+++ b/notes/lecturenotes.tex
@@ -88,7 +88,7 @@ A \bf{frequency distribution} is a table that shows classes or intervals of data
 The class with the most data is called the modal class.
 \subsection{Measures of central tendency}
 \begin{itemize}
-    \item \bf{Mean} - Sum of all sample values divided by the number of values: $\displaystyle\bar{x} = \frac{\Sigma x}{n}$
+    \item \bf{Mean} - Sum of all sample values divided by the number of values: $\displaystyle\bar{x} = \frac{\sum x}{n}$
 \end{itemize}
 \vspace{2mm}
 \begin{center}
@@ -110,8 +110,8 @@ The class with the most data is called the modal class.
 \subsection{Measures of variation and position}
 Range = max - margin
 \begin{itemize}
-    \item \bf{Population Variance} - $\displaystyle\sigma^2 = \frac{\Sigma (x - \mu)^2}{N}$
-    \item \bf{Sample Variance} - $\displaystyle s^2 = \frac{\Sigma (x - \bar{x})^2}{n - 1}$
+    \item \bf{Population Variance} - $\displaystyle\sigma^2 = \frac{\sum (x - \mu)^2}{N}$
+    \item \bf{Sample Variance} - $\displaystyle s^2 = \frac{\sum (x - \bar{x})^2}{n - 1}$
     \item \bf{Population Standard Deviation} - $\displaystyle\sigma = \sqrt{\sigma^2}$
     \item \bf{Sample Standard Deviation} - $\displaystyle s = \sqrt{s^2}$
 \end{itemize}
@@ -153,7 +153,7 @@ Range = max - margin
 Let $p_i$ represent the probability of sample point $i$, then:
 \begin{itemize}
     \item All sample point probabilities must lie between 0 and 1. $(0 \leq p_i \leq 1)$
-    \item The probability of all the sample points within a sample space must sum to one. $(\Sigma p_i = 1)$
+    \item The probability of all the sample points within a sample space must sum to one. $\big(\sum p_i = 1\big)$
 \end{itemize}
 \vspace{5mm}
 \bf{Types of Probability}
@@ -187,9 +187,9 @@ Let $p_i$ represent the probability of sample point $i$, then:
     The Florida Lotto game consists of randomly selecting 6 numbers from the integers 1-53, a player who matches the 6 numbers wins the jackpot.
     \begin{itemize}
         \item[a)] Calculate the number of combinations for this drawning\\
-        $\binom{53}{6} = \frac{53!}{6!(53-6)!} = \frac{53!}{6!\ 47!} = \frac{53 \cdot 52 \cdot 51 \cdot 50 \cdot 49 \cdot 48 \cdot 47!}{6 \cdot 5 \cdot 4 \cdot 3 \cdot 2 \cdot 1 \cdot 47!} = \frac{53 \cdot 52 \cdot 51 \cdot 50 \cdot 49 \cdot 48}{6 \cdot 5 \cdot 4 \cdot 3 \cdot 2 \cdot 1} = \frac{16,529,385,600}{720} = 22,957,480$ possible combinations
+        $\displaystyle \binom{53}{6} = \frac{53!}{6!(53-6)!} = \frac{53!}{6!\ 47!} = \frac{53 \cdot 52 \cdot 51 \cdot 50 \cdot 49 \cdot 48 \cdot 47!}{6 \cdot 5 \cdot 4 \cdot 3 \cdot 2 \cdot 1 \cdot 47!} = \frac{53 \cdot 52 \cdot 51 \cdot 50 \cdot 49 \cdot 48}{6 \cdot 5 \cdot 4 \cdot 3 \cdot 2 \cdot 1} = \frac{16,529,385,600}{720} = 22,957,480$ possible combinations
         \item[b)] What is the probability of winning the jackpot if you buy one ticket\\
-        $P(\text{win}) = \frac{1}{22957480} = 4.356 \cdot 10^{-6}\ \%$
+        $\displaystyle P(\text{win}) = \frac{1}{22957480} = 4.356 \cdot 10^{-6}\ \%$
     \end{itemize}
 \end{shaded}
 \begin{shaded}
@@ -202,7 +202,7 @@ Let $p_i$ represent the probability of sample point $i$, then:
         A$\
         \begin{cases}
             W_1,W_2\\
-            w_2,W_3\\
+            W_2,W_3\\
             W_1,W_3
         \end{cases}$
         \vspace{1mm}\\
@@ -403,16 +403,16 @@ A complete description of a discreet random variable requires that we specify al
 \bf{Requirements for the probability distribution of a discreet random variable $x$}
 \begin{itemize}
     \item $0 \leq P(x) \leq 1,\ $ The probability of $x$ must be between 0 and 1
-    \item $\Sigma P(x) = 1,\ $ The sum of the probabilities of $x$ equals 1
+    \item $\sum P(x) = 1,\ $ The sum of the probabilities of $x$ equals 1
 \end{itemize}
 \subsection{Expected Values of Discrete Random Variables}
 The \bf{mean}, or \bf{expected value} of a discreet random variable $x$ is given by: \hspace{15mm} (same as weighted mean)
 \begin{equation}
-    \mu = E(x) = \Sigma x P(x)
+    \mu = E(x) = \sum x P(x)
 \end{equation}
 To calculate variance 
 \begin{equation}
-    \sigma^2 = \Sigma [x^2 P(x)] - \mu^2
+    \sigma^2 = \sum \big[x^2 P(x)\big] - \mu^2
 \end{equation}
 \subsection{The Binomial Random Variable}
 \bf{Binomial Experiment} - A probability experiment that satisfies these conditions:
@@ -420,11 +420,11 @@ To calculate variance
     \item The experiment has a fixed number of trials, where each trial is independent of the other trials.
     \item There are only two possible outcomes of interest for each trial. Each outcome can be classified as success (S) or failure (F).
     \item The probability of success is the same for each trial.
-    \item The random variable $x$ counts the nnumber of successful trials.
+    \item The random variable $x$ counts the number of successful trials.
 \end{enumerate}
 \bf{Binomial probability formula:}
 \begin{equation}
-    p(x) = \binom{n}{x}p^xq^{n-x}
+    P(x) = \binom{n}{x}p^xq^{n-x}
 \end{equation}
 Where $p$ = probability of success on a single trial, $q = 1 - p$, $n$ = number of trials, $x$ = number of successes in $n$ trials, $n - x$ = number of failures in $n$ trials, and $\displaystyle\binom{n}{x} = \frac{n!}{x!(n-x)!}$
 \begin{itemize}
@@ -802,7 +802,7 @@ Where $p$ = probability of success on a single trial, $q = 1 - p$, $n$ = number 
     \begin{enumerate}
         \item Find the probability that a standard normal random variable exceeds 1.64
         \vspace{1mm}\\
-        For $P(z > n)$ use the compliment of the probability from the table\\
+        For $P(z > n)$ use the complement of the probability from the table\\
         $P(z > 1.64) = 1 - 0.9495 = 0.0505$
         \item Find the probability that a standard normal random variable lies to the left of 0.67
         \vspace{1mm}\\
